test/src/e2e_vm_tests/test_programs/should_fail/annotated_missing_item/src/main.sw
script;

use std::{constants::ZERO_B256, vm::evm::evm_address::EvmAddress};

configurable {
    /// SIGNER: EvmAddress = EvmAddress {
    ///    value: ZERO_B256,
    /// }
}

fn main() {}